--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@ name: CMake
 
 on:
   push:
-    branches: [ main ]
+    branches: [master]
     tags: -"v*1.*"
           
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 env:
   
