--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CMake
 on:
   push:
     branches: [master]
-    tags: -"v*1.*"
+    tags: -"v*1.**"
           
   pull_request:
     branches: [ master ]
